--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a new todo</h1>
+<h1>Create a New todo</h1>
 
 <% if @todo.errors.any? %>
   <h2>These errors prevented the todo from being saved</h2>
@@ -8,14 +8,24 @@
     <% end %>
   </ul>
 <% end %>
+
 <%= form_for @todo do |f|  %>
   <p>
     <%= f.label :name %> <br>
     <%= f.text_field :name %>
   </p>
+  
   <p>
     <%= f.label :description %> <br>
     <%= f.text_area :description %>
   </p>
+  
+  <p>
   <%= f.submit %>
+  </p>
+  
+  
 <% end %>
+  <%= link_to "Back to todos listing", todos_path %>
+
+
